# whiskers

./: Cargo.toml  default.nix  flake.nix
.github/workflows/: build.yml
evergarden/: Cargo.toml  build.rs  flake.nix  shell.nix
evergarden/src/: lib.rs  palette.json
src/: cli.rs  main.rs  matrix.rs  models.rs
tests/: cli.rs
