[package]
name = "evergarden"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

[dependencies]
ansi_term = { version = "0.12.1", optional = true }
css-colors = { version = "1.0.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }

[build-dependencies]
itertools = "0.14.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.84"
quote = "1.0.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
syn = "2.0.66"

[dev-dependencies]
crossterm = "0.28.1"
serde_json = "1.0.117"

[features]
ansi-term = ["dep:ansi_term"]
css-colors = ["dep:css-colors"]
ratatui = ["dep:ratatui"]
serde = ["dep:serde"]
